# p24-elasticsearch

./: .flake8  Makefile  docker-compose.yml  pyproject.toml  query.py  readme.md
blog/: models.py
blog/management/commands/: generate_data.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
search_index/: urls.py  views.py
