[tool.poetry]
name = "p24-elasticsearch"
version = "0.1.0"
description = ""
authors = ["RavshanjonA <akhmadjonovr.98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
django = "^5.1.3"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
flake8 = "^7.1.1"
faker = "^30.8.2"
elasticsearch = "8.11.0"
elasticsearch-dsl = "8.11.0"
django-elasticsearch-dsl = "8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
